--- a/assets/css/main-user.css
+++ b/assets/css/main-user.css
@@ -1195,6 +1195,7 @@ Projects
 }
 
 .project-item .project-title {
+  padding-top: 20px;
   font-weight: 500;
   font-size: 18px;
   color: #1e1e1e;
